Make board visible later to avoid tiny square

--- a/src/css/seki.css
+++ b/src/css/seki.css
@@ -12,6 +12,7 @@
 }
 .seki-board {
   position: absolute;
+  visibility: hidden;
   left: 0;
   top: 0;
   min-width: 50px;
